--- a/index.css
+++ b/index.css
@@ -1,9 +1,23 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 body{
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    display: absolute;
 }
 
 #Header{
     background-color: lightblue;
+}
+
+.timer-container{
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;    
 }
