--- a/index.css
+++ b/index.css
@@ -1,23 +1,54 @@
 *{
-    margin: 0px;
-    padding: 0px;
     box-sizing: border-box;
 }
 
 body{
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: absolute;
-}
-
-#Header{
+    font-family: Arial, Helvetica, sans-serif;
     background-color: lightblue;
 }
 
+#header{
+    color: white;
+    text-align: center;
+    font-size: 3vw;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;               
+    width: 100%;                 
+}
+
 .timer-container{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100%;    
+    background-color: white;
+    border-radius: 10px;
+    width: 50%;
+    margin-bottom: 2em;
+}
+
+#timer{
+    font-size: 3vw;
+    margin: 1em;
+}
+
+.buttons-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1em;
+}
+
+button{
+    font-size: 2vw;
+    padding: 0.5em 1em;
+    margin: 0.5em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
